--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,69 @@ h3.my-profession{
     width: 100%;
     display: block;
 }
+/* Cheat Sheet*/
+.CheatSheet .container{
+    padding-bottom: 40px;
+}
+.CheatSheet .CheatSheet-heading{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 40px;
+}
+.CheatSheet .CheatSheet-heading h2 {
+    color: var(--text-black-900);
+    font-weight: 500;
+}
+.CheatSheet .CheatSheet-item{
+    margin-top: 30px;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner{
+    background-color: var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    border-radius: 10px;
+    padding: 30px 15px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner:hover{
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner .icon{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto 30px;
+    text-align: center;
+    transition: all 0.5s ease;
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner .icon .fa{
+    font-size: 40px;
+    line-height: 60px;
+    color: var(--skin-color);
+    transition: all 0.5s ease;
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner:hover .icon{
+    background: var(--skin-color);
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner:hover .icon .fa{
+    font-size: 25px;
+    color: #ffffff;
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner h4{
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: var(--text-black-900);
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.CheatSheet .CheatSheet-item .CheatSheet-item-inner p {
+    font-size: 16px;
+    color: var(--text-black-700);
+    line-height: 25px;
+}
 /* Contact*/
 .contact-title{
     color: var(--skin-color);
